...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="15B-fx-1XI">
                                <rect key="frame" x="40" y="330" width="520" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="EmailTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sf2-wR-BE8">
                                <rect key="frame" x="40" y="382" width="520" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c5K-gO-teW">
                                <rect key="frame" x="40" y="570" width="57" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="RegisterButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="8Ro-fv-G5R"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pIt-PK-WJQ">
                                <rect key="frame" x="522" y="570" width="38" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="9Sv-QR-rmZ"/>
                                    <constraint firstAttribute="width" constant="38" id="yH2-6r-fkb"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <segue destination="npa-2n-RcB" kind="show" id="FWl-xe-i0g"/>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="QingzhaoLi.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="zHE-Dg-N23">
                                <rect key="frame" x="217" y="28" width="167" height="167"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailImageView"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="167" id="C1X-FP-k9d"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UrY-fh-sAc">
                                <rect key="frame" x="520" y="155" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="wikiButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="UrY-fh-sAc" secondAttribute="height" multiplier="1:1" id="80m-iv-wYl"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hp-As-uZ9">
                                <rect key="frame" x="0.0" y="20" width="30" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="dismissButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="2hp-As-uZ9" secondAttribute="height" multiplier="1:1" id="cgg-hP-MHf"/>
...
