...
//

import UIKit

class PeopleListTableViewController: UITableViewController {
    
    let arrayPeopleName = ["Li Qingzhao", "Su Shi", "Xin Qiji", "Yue Fei", "Zhao Kuangyin"]
    let arrayPeopleTitle = ["A talented female poet", "A Great poet", "A famous military poet", "A great General", "The first emperor of the Song dynasty"]
    let arrayImagename = ["QingzhaoLi.jpg", "Sushi.jpg", "Xinqiji.jpg", "Yuefei.jpg", "Zhaokuangyin.jpg"]
    let arrayDescription = [
        "Li Qingzhao was born 1084 in Zhangqiu (modern Shandong province) into a family of scholar-officials. Her father was a student of Su Shi. He had a large collection of books and Li was educated during her childhood. She was unusually outgoing and knowledgeable for a woman of noble birth.Li Qingzhao was born 1084 in Zhangqiu (modern Shandong province) into a family of scholar-officials. Her 
        "Su Shi (January 8, 1037 – August 24, 1101), also known as Su Tungpo, was a Chinese writer, poet, painter, calligrapher, pharmacologist, gastronome, and a statesman of the Song dynasty. A major personality of the Song era, Su was an important figure in Song Dynasty politics, aligning himself with Sima Guang and others, against the New Policy party led by Wang Anshi. Su Shi was famed as an 
        "Xin Qiji (28 May 1140 – 1207) was a Chinese poet and military leader during the Southern Song dynasty.During Xin's lifetime, northern China was occupied during the Jin–Song wars by the Jurchens of the Jin dynasty, a nomadic people from what is now north-east China then regarded as barbarians. Only southern China was ruled by the Han Chinese Southern Song dynasty. Xin was born in the moder
...
